# xcoreutils

./: CMakeLists.txt  README.md
cat/src/: CMakeLists.txt  main.c
false/src/: CMakeLists.txt
include/: CMakeLists.txt  config.h.in
true/src/: CMakeLists.txt  main.c
yes/src/: CMakeLists.txt
